; ModuleID = '/home/carl/AnghaBench/lab/engine/code/qcommon/extr_vm.c_VM_BlockCopy.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/qcommon/extr_vm.c_VM_BlockCopy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i64 }

@currentVM = common dso_local global %struct.TYPE_2__* null, align 8
@ERR_DROP = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"OP_BLOCK_COPY out of range!\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @VM_BlockCopy(i32 %0, i32 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** @currentVM, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  store i32 %10, i32* %7, align 4
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* %7, align 4
  %13 = and i32 %11, %12
  %14 = load i32, i32* %4, align 4
  %15 = icmp ne i32 %13, %14
  br i1 %15, label %48, label %16

16:                                               ; preds = %3
  %17 = load i32, i32* %5, align 4
  %18 = load i32, i32* %7, align 4
  %19 = and i32 %17, %18
  %20 = load i32, i32* %5, align 4
  %21 = icmp ne i32 %19, %20
  br i1 %21, label %48, label %22

22:                                               ; preds = %16
  %23 = load i32, i32* %4, align 4
  %24 = zext i32 %23 to i64
  %25 = load i64, i64* %6, align 8
  %26 = add i64 %24, %25
  %27 = load i32, i32* %7, align 4
  %28 = zext i32 %27 to i64
  %29 = and i64 %26, %28
  %30 = load i32, i32* %4, align 4
  %31 = zext i32 %30 to i64
  %32 = load i64, i64* %6, align 8
  %33 = add i64 %31, %32
  %34 = icmp ne i64 %29, %33
  br i1 %34, label %48, label %35

35:                                               ; preds = %22
  %36 = load i32, i32* %5, align 4
  %37 = zext i32 %36 to i64
  %38 = load i64, i64* %6, align 8
  %39 = add i64 %37, %38
  %40 = load i32, i32* %7, align 4
  %41 = zext i32 %40 to i64
  %42 = and i64 %39, %41
  %43 = load i32, i32* %5, align 4
  %44 = zext i32 %43 to i64
  %45 = load i64, i64* %6, align 8
  %46 = add i64 %44, %45
  %47 = icmp ne i64 %42, %46
  br i1 %47, label %48, label %51

48:                                               ; preds = %35, %22, %16, %3
  %49 = load i32, i32* @ERR_DROP, align 4
  %50 = call i32 @Com_Error(i32 %49, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  br label %51

51:                                               ; preds = %48, %35
  %52 = load %struct.TYPE_2__*, %struct.TYPE_2__** @currentVM, align 8
  %53 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %52, i32 0, i32 1
  %54 = load i64, i64* %53, align 8
  %55 = load i32, i32* %4, align 4
  %56 = zext i32 %55 to i64
  %57 = add nsw i64 %54, %56
  %58 = load %struct.TYPE_2__*, %struct.TYPE_2__** @currentVM, align 8
  %59 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %58, i32 0, i32 1
  %60 = load i64, i64* %59, align 8
  %61 = load i32, i32* %5, align 4
  %62 = zext i32 %61 to i64
  %63 = add nsw i64 %60, %62
  %64 = load i64, i64* %6, align 8
  %65 = call i32 @Com_Memcpy(i64 %57, i64 %63, i64 %64)
  ret void
}

declare dso_local i32 @Com_Error(i32, i8*) #1

declare dso_local i32 @Com_Memcpy(i64, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
